Fix fonts and gaps in team section

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
     margin: 0px;   
   }  
   
-  .header {
+  .header,
+  .team {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -136,9 +137,16 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
+    margin-top: -8px;
   }
 
   .team-info {
     display: flex;
+    gap: 30px;
+  }
+
+  .team-header {
+    color: rgb(24, 87, 24);
   }
